unpackaged/objects/WorkOrder.object
<CustomObject>
  <fields>
    <fullName>AssetSerialNumber__c</fullName>
    <description>Formula to expose the serial number of the asset on Work Order</description>
    <formula>Asset.SerialNumber</formula>
    <label>Asset Serial Number</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Describewhathasbeendone__c</fullName>
    <description>Detailed description by the contractor about what he has completed</description>
    <label>Describe what has been done</label>
    <length>32768</length>
    <type>Html</type>
  </fields>
  <fields>
    <fullName>Phone__c</fullName>
    <description>Account phone number, mainly to expose it to Contractor portal</description>
    <formula>Account.Phone</formula>
    <label>Phone</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>SourceRecord__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>CIM Record updated through the Case</description>
    <label>Source Record</label>
    <referenceTo>Source_Record__c</referenceTo>
    <relationshipLabel>Work Orders</relationshipLabel>
    <relationshipName>Work_Orders</relationshipName>
    <type>Lookup</type>
  </fields>
  <listViews>
    <fullName>All_WorkOrders</fullName>
    <filterScope>Everything</filterScope>
    <label>All Work Orders</label>
  </listViews>
  <listViews>
    <fullName>My_WorkOrders</fullName>
    <filterScope>Mine</filterScope>
    <label>My Work Orders</label>
  </listViews>
  <sharingModel>Private</sharingModel>
  <validationRules>
    <fullName>Status_equals_closed</fullName>
    <active>true</active>
    <description>This validation rule will be used to prevent partner users marking the status as Closed, however they should only be able to complete it.</description>
    <errorConditionFormula>AND(
				 OwnerId &lt;&gt; $User.Id,
     ISCHANGED(Status),
     ISPICKVAL(Status, "Closed")
   )</errorConditionFormula>
    <errorMessage>Only work order owner can close this</errorMessage>
  </validationRules>
</CustomObject>